--- a/src/app/generator/generator.component.scss
+++ b/src/app/generator/generator.component.scss
@@ -36,7 +36,7 @@ main {
     }
 
     p.not-found {
-      color: transparent;
+      color: red;
       font-size: 16px;
       margin-bottom: 15px;
     }
